--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
@@ -15,10 +15,10 @@
         .ToArray();
 }
 
-<div class="mb-3 form-check">
+@*<div class="mb-3 form-check">
     @Html.OdkCheckBoxFor(x => x.Public, new { @class = "form-check-input" })
     @Html.LabelFor(x => x.Public, new { @class = "form-check-label" })
-</div>
+</div>*@
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Name, new { @class = "form-label" })
@@ -35,7 +35,7 @@
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Date, new { @class = "form-label" })
-    @Html.TextBoxFor(x => x.Date, "{0:dd/MM/yyyy}", new { @class = "form-control", data_datepicker = "" })
+    @Html.TextBoxFor(x => x.Date, format: "{0:dd/MM/yyyy}", new { @class = "form-control", data_datepicker = "" })
     @Html.ValidationMessageFor(x => x.Date)
 </div>
 
@@ -67,4 +67,58 @@
             Name = "Events.Hosts"
         })
     @Html.ListBoxFor(x => x.Hosts, Model.HostOptions, new { @class = "form-control" })
+</div>
+
+<div class="form-group mb-3">
+    @Html.LabelFor(x => x.AttendeeLimit, new { @class = "form-label" })
+    @await Html.PartialAsync("Components/_FeatureTooltip", 
+        new FeatureTooltipViewModel 
+        {
+            Name = "Events.AttendeeLimit"
+        })
+    @await Html.PartialAsync("Components/_Tooltip", 
+        "Limit how many members can attend this event. For ticketed events this limits how many tickets can be bought.")
+    @Html.TextBoxFor(x => x.AttendeeLimit, new { @class = "form-control", type = "number" })
+    @Html.ValidationMessageFor(x => x.AttendeeLimit)
+</div>
+
+<h4>
+    Tickets
+    @await Html.PartialAsync("Components/_FeatureTooltip", 
+        new FeatureTooltipViewModel 
+        {
+            Name = "Events.Tickets"
+        })
+</h4>
+<div class="form-group mb-3">
+    @Html.LabelFor(x => x.TicketCost, new { @class = "form-label" })
+    @await Html.PartialAsync("Components/_Tooltip", 
+        "The total ticket cost for this event. Set the max number of attendees above to set the number of tickets.")
+    <div class="input-group">
+        @if (Model.CurrencySymbol != null)
+        {
+            <span class="input-group-text">
+                @Model.CurrencySymbol
+            </span>
+        }
+        @Html.TextBoxFor(x => x.TicketCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
+    </div>
+    
+    @Html.ValidationMessageFor(x => x.TicketCost)
+</div>
+
+<div class="form-group mb-3">
+    @Html.LabelFor(x => x.TicketDepositCost, new { @class = "form-label" })
+    @await Html.PartialAsync("Components/_Tooltip", 
+        "The deposit cost for this event. Members who pay a deposit will then only need to pay the remainder of the total cost.")
+    <div class="input-group">
+        @if (Model.CurrencySymbol != null)
+        {
+            <span class="input-group-text">
+                @Model.CurrencySymbol
+            </span>
+        }
+        @Html.TextBoxFor(x => x.TicketDepositCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
+    </div>
+    @Html.ValidationMessageFor(x => x.TicketDepositCost)
 </div>
