--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
@@ -20,6 +20,7 @@
     <tr>
         <th>Name</th>
         <th>Added</th>
+        <th></th>
     </tr>
     </thead>
     <tbody>
@@ -30,6 +31,14 @@
                 <a href="/SuperAdmin/Features/@feature.Id">@feature.Name</a>
             </td>
             <td>@feature.CreatedUtc.ToString("yyyy-MM-dd")</td>
+            <td>
+                <form action="/SuperAdmin/Features/@feature.Id/Delete" method="post">
+                    @Html.AntiForgeryToken()
+                    <button class="btn-icon text-danger" onclick="return confirm('Are you sure you want to delete this feature?');">
+                            <i class="fas fa-times"></i>
+                    </button>
+                </form>
+            </td>
         </tr>
     }
     </tbody>
