(profile): hide application-only fields

--- a/ODK.Web.Razor/Views/Shared/Members/_MemberProfile.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Members/_MemberProfile.cshtml
@@ -28,6 +28,11 @@
             continue;
         }
 
+        if (chapterProperty.ApplicationOnly)
+        {
+            continue;
+        }
+
         <div class="form-group mb-3">
             <label class="form-label">@chapterProperty.Label</label>
             <div class="form-control-plaintext">
