--- a/ODK.Web.Razor/Views/Shared/Payments/_PaymentModal.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Payments/_PaymentModal.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Web.Razor.Models
+﻿@using ODK.Core.Payments
+@using ODK.Web.Razor.Models
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Payments
 @model PaymentModalViewModel
@@ -9,7 +10,7 @@
     Title = Model.Title,
     Body =
     @<div>
-        @if (Model.ChapterPaymentSettings?.Provider == "PayPal")
+        @if (Model.ChapterPaymentSettings?.Provider == PaymentProviderType.PayPal)
         {
             <form method="post" action="@Model.Action">
                 @Html.AntiForgeryToken()
