--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionContent.cshtml
@@ -31,20 +31,22 @@
         <thead>
             <tr>
                 <th>Currency</th>
-                <th>Monthly</th>
-                <th>Yearly</th>
+                <th>Frequency</th>
+                <th>Amount</th>
+                <th>External Id</th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var price in Model.Prices.OrderBy(x => x.MonthlyAmount))
+            @foreach (var price in Model.Prices.OrderBy(x => x.Amount))
             {
                 var currency = currencyDictionary[price.CurrencyId];
 
                 <tr>
                     <td>@currency.Code</td>
-                    <td>@currency.Symbol@price.MonthlyAmount</td>
-                    <td>@currency.Symbol@price.YearlyAmount</td>
+                    <td>@price.Frequency.ToString()</td>
+                    <td>@currency.ToAmountString(price.Amount)</td>
+                    <td>@price.ExternalId</td>
                     <td>
                         <form action="/SuperAdmin/Subscriptions/@Model.Subscription.Id/Prices/@price.Id/Delete" method="post">
                             @Html.AntiForgeryToken()
