--- a/ODK.Web.Razor/Views/Shared/Account/_SubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_SubscriptionContent.cshtml
@@ -69,7 +69,7 @@
                     
                     @await Html.PartialAsync("Payments/_PaymentModal", new PaymentModalViewModel
                     {
-                        Action = $"/{Model.Chapter.Name}/Account/Subscription/Purchase",
+                        Action = $"/Chapters/{Model.Chapter.Id}/Account/Subscription/Purchase",
                         ChapterPaymentSettings = Model.ChapterPaymentSettings,
                         FormContentFunc =
                             @<input type="hidden" name="subscriptionId" value="@chapterSubscription.Id" />,
