--- a/ODK.Web.Razor/Views/Shared/Payments/_PaymentSubscriptionForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Payments/_PaymentSubscriptionForm.cshtml
@@ -6,12 +6,11 @@
 {
     <div data-paypal-container="paypal-subscription-@Model.ExternalId"
          data-paypal-currencycode="@Model.CurrencyCode"
-         data-paypal-type="subscription">
+         data-paypal-type="subscription"
+         data-paypal-planid="@Model.ExternalId">
     </div>
-    <script src="https://www.paypal.com/sdk/js?client-id=Aafqy4G71ZCNXHpMEmJnlizTupnKhnXTCNrlCEz9stdMlMULuV8JGMemiwpFpW7ZekuEaY6NKABJ7OBt&vault=true&intent=subscription"></script>
-    <script>
-        
-    </script>
+    <input data-paypal-token type="hidden" name="externalId" />
+    <input type="hidden" name="siteSubscriptionPriceId" value="@Model.SiteSubscriptionPriceId" />
 }
 else
 {
