--- a/ODK.Web.Razor/Views/Shared/Pricing/_PricingContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Pricing/_PricingContent.cshtml
@@ -9,44 +9,67 @@
         .ToArray();
 
     var currency = Model.Currency ?? Model.Currencies.FirstOrDefault();
-    if (currency == null || Model.PaymentProvider == null)
+    if (currency == null || Model.PaymentSettings?.Provider == null)
     {
         return;
     }
 }
 
-<div class="d-flex">
+<div class="row gap-3">
     @foreach (var subscriptionDto in subscriptions)
     {
         var subscription = subscriptionDto.Subscription;
         var prices = subscriptionDto.Prices.Where(x => x.CurrencyId == currency.Id);
 
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">@subscription.Name</h5>
-                <div class="card-text">
-                    @Html.Raw(subscription.Description)
-                    <div class="d-flex gap-3">
-                        @foreach (var price in prices.OrderBy(x => x.Amount))
-                        {
-                            if (string.IsNullOrEmpty(price.ExternalId))
-                            {
-                                continue;
-                            }
+        <div class="col">
+            <div class="card h-100">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title">@subscription.Name</h5>
+                    <div class="card-text d-flex flex-column flex-grow-1">
+                        @Html.Raw(subscription.Description)
 
-                            @await Html.PartialAsync("Pricing/_SubscriptionPrice", new SiteSubscriptionPriceViewModel
-                            {
-                                Amount = price.Amount,
-                                Chapter = Model.Chapter,
-                                Currency = currency,
-                                Frequency = price.Frequency,
-                                ExternalId = price.ExternalId,
-                                Provider = Model.PaymentProvider.Value
-                            })   
-                        }                        
+                        @if (Model.CurrentMemberSubscription?.SiteSubscriptionId == subscription.Id)
+                        {
+                            <div class="mt-auto">
+                                <i class="fa-solid fa-star text-warning"></i>
+                                <span>Current plan</span>
+                            </div>
+                        }
+                        else
+                        {                            
+                            <div class="d-flex flex-column gap-3 mt-auto">
+                                @if (prices.Any(x => x.IsPaid) &&
+                                    Model.CurrentMemberSubscription?.SiteSubscriptionPrice?.IsPaid == true)
+                                {
+                                    <p>
+                                        Purchasing this subscription will cancel your existing subscription.
+                                    </p>
+                                }
+
+                                @foreach (var price in prices.OrderBy(x => x.Amount))
+                                {
+                                    if (price.ExternalId == null)
+                                    {
+                                        continue;
+                                    }
+
+                                    @await Html.PartialAsync("Pricing/_SubscriptionPrice", new SiteSubscriptionPriceViewModel
+                                    {
+                                        Amount = price.Amount,
+                                        Chapter = Model.Chapter,
+                                        Currency = currency,
+                                        Frequency = price.Frequency,
+                                        ExternalId = price.ExternalId,
+                                        Provider = Model.PaymentSettings.Provider.Value,
+                                        SiteSubscription = subscription,
+                                        SiteSubscriptionPriceId = price.Id
+                                    })   
+                                }                        
+                            </div>
+                        }
                     </div>
-                </div>
-            </div>            
+                </div>            
+            </div>
         </div>
     }
 </div>
