--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionForm.cshtml
@@ -1,4 +1,16 @@
-﻿@model ODK.Web.Razor.Models.SuperAdmin.SiteSubscriptionFormViewModel
+﻿@using ODK.Services.Subscriptions
+@using ODK.Web.Common.Extensions
+@model ODK.Web.Razor.Models.SuperAdmin.SiteSubscriptionFormViewModel
+@inject ISiteSubscriptionAdminService SiteSubscriptionAdminService
+@{
+    var memberId = User.MemberId();
+    var siteSubscriptions = await SiteSubscriptionAdminService.GetAllSubscriptions(memberId);
+    var fallbackOptions = siteSubscriptions
+        .Where(x => x.Id != Model.SiteSubscriptionId)
+        .Select(x => new SelectListItem { Value = x.Id.ToString(), Text = x.Name })
+        .OrderBy(x => x.Text)
+        .ToArray();
+}
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Name, new { @class = "form-label" })
@@ -10,6 +22,12 @@
     @Html.LabelFor(x => x.Description, new { @class = "form-label" })
     @Html.TextAreaFor(x => x.Description, new { @class = "form-control", data_html_editor = "" })
     @Html.ValidationMessageFor(x => x.Description)
+</div>
+
+<div class="form-group mb-3">
+    @Html.LabelFor(x => x.FallbackSiteSubscriptionId, new { @class = "form-label" })
+    @Html.DropDownListFor(x => x.FallbackSiteSubscriptionId, fallbackOptions, "", new { @class = "form-select" })
+    @Html.ValidationMessageFor(x => x.FallbackSiteSubscriptionId)
 </div>
 
 <div class="form-check mb-3">
@@ -43,3 +61,4 @@
     @Html.CheckBoxFor(x => x.Premium, new { @class = "form-check-input" })
     @Html.LabelFor(x => x.Premium, new { @class = "form-check-label" })
 </div>
+
