--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionsContent.cshtml
@@ -20,6 +20,7 @@
             <th>Group limit</th>
             <th>Member limit</th>
             <th>Features</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -54,7 +55,20 @@
                     {
                         <i class="fa-solid fa-dollar-sign" data-bs-toggle="tooltip" data-bs-title="Member subscriptions"></i>
                     }
-                </td>                
+                </td>    
+                <td>
+                    @if (subscription.Default)
+                    {
+                        @:Default
+                    }
+                    else
+                    {
+                        <form action="/superadmin/subscriptions/@subscription.Id/default" method="post">
+                            @Html.AntiForgeryToken()
+                            <button class="btn btn-primary btn-sm">Set default</button>
+                        </form>
+                    }
+                </td>
             </tr>
         }
     </tbody>
