load scripts and styles with version

--- a/ODK.Web.Razor/Pages/Account/Create.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Create.cshtml
@@ -35,8 +35,6 @@
 
 @section scripts
 {
-    <script src="/lib/cropperjs/cropper.min.js"></script>
-    <script src="/js/odk.imaging.js"></script>
-
+    @await Html.PartialAsync("Components/_ImagingScripts")
     @await Html.PartialAsync("Components/_GoogleLocationScripts")
 }
