--- a/ODK.Web.Razor/Pages/Account/Picture.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Picture.cshtml
@@ -42,6 +42,5 @@
 
 @section scripts
 {
-    <script src="/lib/cropperjs/cropper.min.js"></script>
-    <script src="/js/odk.imaging.js"></script>
+    @await Html.PartialAsync("Components/_ImagingScripts")
 }
