--- a/ODK.Web.Razor/Views/Shared/Components/_GoogleMap.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_GoogleMap.cshtml
@@ -35,4 +35,4 @@
         data-map-query="@Model.QuerySource"
         allowfullscreen>
 </iframe>
-<script src="/js/odk.maps.js"></script>
+<script src="~/js/odk.maps.js" asp-append-version="true"></script>
