--- a/ODK.Web.Razor/Pages/_ViewImports.cshtml
+++ b/ODK.Web.Razor/Pages/_ViewImports.cshtml
@@ -3,3 +3,5 @@
 @namespace ODK.Web.Razor.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RazorPages
+@addTagHelper *, WebOptimizer.Core
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
